# cmake-opengl

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cc  vertex.h
src/shaders/: vertex.glsl  vertex.h
src/shaders/include/: fragment.h
